@@ -34,7 +34,10 @@
  ******************************************************************************
  *
  * $Log$
- * Revision 1.7  2004-09-26 20:09:35  fwarmerdam
+ * Revision 1.8  2007-12-30 16:57:33  fwarmerdam
+ * add support for z and m
+ *
+ * Revision 1.7  2004/09/26 20:09:35  fwarmerdam
  * avoid rcsid warnings
  *
  * Revision 1.6  2004/01/09 16:39:49  fwarmerdam
@@ -71,7 +74,7 @@ int main( int argc, char ** argv )
 /* -------------------------------------------------------------------- */
     if( argc != 3 )
     {
-	printf( "shpcreate shp_file [point/arc/polygon/multipoint]\n" );
+	printf( "shpcreate shp_file [point/arc/polygon/multipoint][/m/z]\n" );
 	exit( 1 );
     }
 
@@ -86,6 +89,24 @@ int main( int argc, char ** argv )
         nShapeType = SHPT_POLYGON;
     else if( strcmp(argv[2],"MULTIPOINT")==0 ||strcmp(argv[2],"multipoint")==0)
         nShapeType = SHPT_MULTIPOINT;
+    else if( strcmp(argv[2],"POINTZ") == 0 || strcmp(argv[2],"pointz") == 0 )
+        nShapeType = SHPT_POINTZ;
+    else if( strcmp(argv[2],"ARCZ") == 0 || strcmp(argv[2],"arcz") == 0 )
+        nShapeType = SHPT_ARCZ;
+    else if( strcmp(argv[2],"POLYGONZ") == 0 || strcmp(argv[2],"polygonz") == 0)
+        nShapeType = SHPT_POLYGONZ;
+    else if( strcmp(argv[2],"MULTIPOINTZ") == 0 
+             || strcmp(argv[2],"multipointz") == 0)
+        nShapeType = SHPT_MULTIPOINTZ;
+    else if( strcmp(argv[2],"POINTM") == 0 || strcmp(argv[2],"pointm") == 0 )
+        nShapeType = SHPT_POINTM;
+    else if( strcmp(argv[2],"ARCM") == 0 || strcmp(argv[2],"arcm") == 0 )
+        nShapeType = SHPT_ARCM;
+    else if( strcmp(argv[2],"POLYGONM") == 0 || strcmp(argv[2],"polygonm") == 0)
+        nShapeType = SHPT_POLYGONM;
+    else if( strcmp(argv[2],"MULTIPOINTM") == 0 
+             || strcmp(argv[2],"multipointm") == 0 )
+        nShapeType = SHPT_MULTIPOINTM;
     else
     {
 	printf( "Shape Type `%s' not recognised.\n", argv[2] );
