@@ -1,3 +1,9 @@
+2007-12-30  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* shpadd.c/shpcreate.c: Add support for z and m files.
+
+	* Massive overhaul to use hooks for file io, etc. 
+
 2007-11-21  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* shpopen.c/shapefil.h: Don't keep .shx file open in read-only mode.
